--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".activity.MonitorGameActivity">
         </activity>
+        <activity android:name=".activity.SettingActivity"/>
     </application>
 
 </manifest>
