--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         <activity android:name=".activity.MonitorGameActivity">
         </activity>
         <activity android:name=".activity.SettingActivity"/>
+        <activity android:name=".activity.RemindActivity">
+        </activity>
+        <activity android:name=".activity.ContactRecordActivity">
+        </activity>
     </application>
 
 </manifest>
